fixed overflow-x

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@ body {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .bg-home {
